views/home.css
.passwd {
    text-align: end;
}

.hidden-text {
    font-size: 0;
    position: relative;
}

.hidden-text::before {
    content: counter(chars, disc);
    font-size: 1rem;
    position: absolute;
}

.no-child {
    font-style: italic;
}

.small-ico {
    width: 19px;
    height: 19px;
}

.row-group:hover, .row-field:hover {
    background-color: var(--secondary-active-color);
    cursor: pointer;
}

.row-separator {
    background-color: var(--secondary-active-color);
    height: 1px;
    width: auto;
    margin: 0px 10px;
    padding-bottom: 4px;
    padding-top: 4px;
}

